--- a/oas-env/oas/templates/product_detail.html
+++ b/oas-env/oas/templates/product_detail.html
@@ -10,40 +10,65 @@
 <body>
 
 
-  <div class="card-details">
-    <div class="container">
-        <div class="product-detail">
-            <div class="product-image">
-                <img src="{{ product.image.url }}" alt="{{ product.title }}">
-            </div>
-            <div class="product-info">
-                <h1>{{ product.title }}</h1>
-                <div class="reviews-counter">
-                    <div class="rate">
-                        <input type="radio" id="star5" name="rate" value="5" checked />
-                        <label for="star5" title="5 stars">5 stars</label>
-                        <input type="radio" id="star4" name="rate" value="4" />
-                        <label for="star4" title="4 stars">4 stars</label>
-                        <input type="radio" id="star3" name="rate" value="3" />
-                        <label for="star3" title="3 stars">3 stars</label>
-                        <input type="radio" id="star2" name="rate" value="2" />
-                        <label for="star2" title="2 stars">2 stars</label>
-                        <input type="radio" id="star1" name="rate" value="1" />
-                        <label for="star1" title="1 star">1 star</label>
-                    </div>
-                    <span>3 Reviews</span>
+    <div class="inner-banner">
+        <div class="container">
+          <div class="inner-banner-content">
+            <h2
+              data-wow-duration="1.5s"
+              data-wow-delay=".2s"
+              style="
+                visibility: visible;
+                animation-duration: 1.5s;
+                animation-delay: 0.2s;
+              "
+            >
+              <b>{{ product.title }}</b>
+            </h2>
+          </div>
+          <!-- /.inner-banner-content -->
+          <div class="inner-banner-img">
+            <img src="{% static 'img/breadcrumb.png'%}" alt="" />
+          </div>
+          <!-- /.inner-banner-img -->
+        </div>
+        <!-- /.container -->
+      </div>
+      <!-- /.inner-banner -->
+
+
+
+      <div class="card-details">
+        <div class="container">
+            <div class="product-detail">
+                <div class="product-image">
+                    <img src="{{ product.image.url }}" alt="{{ product.title }}">
                 </div>
-                <p>{{ product.description }}</p>
-                <form method="POST" action="{% url 'save_price' product.id %}">
-                    {% csrf_token %}
-                    <label for="price">Enter your price:</label>
-                    <input type="number" id="price" name="price" required>
-                    <button type="submit" class="btn-submit">Submit Price</button>
-                </form>
+                <div class="product-info">
+                    <h1>{{ product.title }}</h1>
+                    <p>{{ product.description }}</p>
+                    
+    
+                    <!-- Input for price -->
+                    <form method="POST" action="{% url 'save_price' product.id %}">
+                        {% csrf_token %}
+                        <label for="price">Enter your price:</label>
+                        <input type="number" id="price" name="price" required>
+    
+                        <!-- Submit button -->
+                        <button type="submit" class="btn-submit">Submit Price</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
+    
+
+
+
+
+
+
+
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -54,7 +79,53 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"><div class="pd-wrap">
-   
+    <div class="pd-wrap">
+      <div class="bid-submit">
+        <div class="container">
+          <div class="heading-section">
+            <h2>Product Details</h2>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div id="slider" class="owl-carousel product-slider">
+                <div class="item">
+                  <img src="{{ product.image.url }}" />
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="product-dtl">
+                <div class="product-info">
+                  <div class="product-name">{{ product.title }}</div>
+                  <div class="reviews-counter">
+                    <div class="rate">
+                      <input type="radio" id="star5" name="rate" value="5" checked />
+                      <label for="star5" title="text">5 stars</label>
+                      <input type="radio" id="star4" name="rate" value="4" />
+                      <label for="star4" title="text">4 stars</label>
+                      <input type="radio" id="star3" name="rate" value="3" />
+                      <label for="star3" title="text">3 stars</label>
+                      <input type="radio" id="star2" name="rate" value="2" />
+                      <label for="star2" title="text">2 stars</label>
+                      <input type="radio" id="star1" name="rate" value="1" />
+                      <label for="star1" title="text">1 star</label>
+                    </div>
+                    <span>3 Reviews</span>
+                  </div>
+                  <div class="product-price-discount">
+                    <span>{{ product.description }}</span>
+                    <span class="line-through">{{ product.description }}+600</span>
+                  </div>
+                  <p class="short-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Additional content here -->
+        </div>
+      </div>
+    </div>
+    
       <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="	sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
